--- a/zion-custom-homes/app/globals.css
+++ b/zion-custom-homes/app/globals.css
@@ -9,13 +9,21 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    font-family: 'Ivypresto Display', sans-serif;
+    --background: #eee8e0;
+    --foreground: #000000;
   }
 }
 
+
 body {
+  font-family: 'Ivypresto Display', sans-serif;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+*{
+  font-family: 'Ivypresto Display', sans-serif;
+}
+
