--- a/zion-custom-homes/app/globals.css
+++ b/zion-custom-homes/app/globals.css
@@ -15,6 +15,9 @@
   }
 }
 
+h1{
+  font-family: 'Ivypresto Display', sans-serif;
+}
 
 body {
   font-family: 'Ivypresto Display', sans-serif;
@@ -27,3 +30,22 @@ body {
   font-family: 'Ivypresto Display', sans-serif;
 }
 
+.contact-us-button:hover {
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 0;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes spawnLine {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
